[tool.poetry]
name = "my-first-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Nat1an <nathan@nat1an.xyz>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.12.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
